fix page overflowing in 2nd 'How To Play' page

--- a/src/components/tutorial/styles/step2.scss
+++ b/src/components/tutorial/styles/step2.scss
@@ -105,7 +105,7 @@
       background-color: lightblue;
       padding: 1.5vmin;
       box-shadow: lightblue 0 0 0.4vmin 0.2vmin;
-      margin: 0 1vmin 0 1vmin;
+      margin: -5vmin 1vmin 0 1vmin;
 
     }
   }
